Fix broken links and spacing in footer

--- a/assets/sass/_layout.scss
+++ b/assets/sass/_layout.scss
@@ -202,6 +202,10 @@
 	@media (min-width: $reflex-md) {
 		margin-top: 0;
 	}
+
+	&.no-margin-top{
+		margin-top: 0;
+	}
 }
 
 .footer-item-link{
